# 2022-spring-unsupervised-learning

./: .gitignore  ARCHITECTURE.md  Alina'sLRGraphs.ipynb  CreatingGraphs.py  LICENSE  LRNotebook.ipynb  Logistic Regression.ipynb  MANIFEST.in  Main.py  Markdowndisplay.ipynb  Markdowntest.ipynb  Mzyk's Graphs.ipynb  README.md  SampleOfAlina'sGraphs.ipynb  SampleOfMzyk.ipynb  Test.ipynb  Utilities.py  requirements.txt  setup.cfg
.ipynb_checkpoints/: Alina'sLRGraphs-checkpoint.ipynb  LRNotebook-checkpoint.ipynb  Logistic Regression-checkpoint.ipynb  Markdowntest-checkpoint.ipynb  SampleOfMzyk-checkpoint.ipynb
algorithmanalysis/: CreateAlgorithmAnalysisMD.py  LRNotebook.ipynb  Logistic Regression.ipynb
algorithms/: AlgorithmBase.py  LogisticRegression.py
datasetfeatures/: DatasetFeaturesBase.py  MzykMSDFeatures.py  SyntheticMSDFeatures.py
datasets/: DatasetBase.py  MacrophageStageDataset.py  MzykFilePaths.py  SmallerSetSyntheticFilePaths.py  SyntheticDataset.py  SyntheticDatasetSubset.py  SyntheticFilePaths.py
features/: DeltaFromStartFeatureCreator.py  Features.py  MSDFeatureCreator.py  MultiplyByFactorFeatureCreator.py  OutlierFeatureCreator.py  PointsDistanceFeatureCreator.py  TFeatureCreator.py  ThreeDMSDFeatureCreator.py  ZFeatureCreator.py
ml_pipelines/: LRPipelineFactory.py
normalizefeatures/: DivideByMaxNormalization.py  DoNothingNormalization.py  NormalizeFeaturesBase.py  ScaletoMillion.py
plotting/: ComparePlotsBase1.py  FeaturesOverIndices.py  GraphParameters.py
savedgraphs/: Alina'sGraphs.ipynb  CreatingGraphs.py  Mzyk's Graphs.ipynb  (+2 more)
(+232 files in other folders)
