[metadata]
name = AIfSR_Trajectory_Analysis
version = 0.0.1
author = NYU AI for Scientific Research Team
author_email = aifsr@nyu.edu
description = Code base for analyzing and predicting information on trajectories.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/AIfSR/2022-spring-unsupervised-learning
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
include_package_data = True
install_requires =
    matplotlib
    CairoSVG
    numpy
    Pillow
    scikit_learn
[options.packages.find]
where = src
exclude = tests*